--- a/code/with-usability/package.json
+++ b/code/with-usability/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@microsoft/clarity": "^1.0.0",
     "@neondatabase/serverless": "^1.0.2",
     "@privy-io/react-auth": "^3.4.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
